Fix bad z-index value on navbar

--- a/src/stylesheets/NavBarAndFooter.css
+++ b/src/stylesheets/NavBarAndFooter.css
@@ -89,7 +89,7 @@ footer img {
     position: fixed;
     top: 0;
     padding: 0;
-    z-index: 1000000000000000000000;
+    z-index: 1000000000;
     width: 100%;
   }
 
